src/test/deca/syntax/invalid/created/operande_manquante/div_a_.deca
// Description :
//    test div pour une opérande manquante
//
// Resultats :
//		Erreur syntaxique
//    	Ligne 11: operante manquante

{
c = a / ;
}
